samples/_failures_safe/1761310799_b12380_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18d02978.c: In function ‘tokenize’:
./samples/SAFE/__tmp_18d02978.c:150:9: error: expected identifier or ‘(’ at end of input
  150 |         char
      |         ^~~~
./samples/SAFE/__tmp_18d02978.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_18d02978.c:150:9: error: expected declaration or statement at end of input
